Update icon... svg no longer supported

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "color": "#192434",
         "theme": "dark"
     },
-    "icon": "icon.svg",
+    "icon": "icon.png",
     "bugs": {
         "url": "https://github.com/AshPowell/monokai-one-dark-vivid/issues"
     },
